...
                                        ),
                                        Tab(
                                          key: ValueKey('LoginTab_rr7p'),
                                          text: 'Log In',
                                        ),
...
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Signup-Email_de01'),
                                                              controller: _model
                                                                  .signupEmailTextController,
...
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Signup-Password_4gmc'),
                                                              controller: _model
                                                                  .signupPasswordTextController,
...
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Signup-ConfirmPassword_wswg'),
                                                              controller: _model
                                                                  .signupConfirmPasswordTextController,
...
                                                    child: FFButtonWidget(
                                                      key: ValueKey(
                                                          'Button_q481'),
                                                      onPressed: () async {
                                                        logFirebaseEvent(
...
                                                            child: Text(
                                                              key: ValueKey(
                                                                  'Text_i418'),
                                                              'Welcome Back!',
                                                              textAlign:
...
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Login-Email_e1q0'),
                                                              controller: _model
                                                                  .loginEmailTextController,
...
                                                                TextFormField(
                                                              key: ValueKey(
                                                                  'Login-Password_ddjr'),
                                                              controller: _model
                                                                  .loginPasswordTextController,
...
                                                      child: FFButtonWidget(
                                                        key: ValueKey(
                                                            'Button_gaeo'),
                                                        onPressed: () async {
                                                          logFirebaseEvent(
...
