...
            mainAxisAlignment: MainAxisAlignment.start,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              Padding(
                padding: EdgeInsetsDirectional.fromSTEB(15.0, 35.0, 0.0, 35.0),
                child: Text(
                  key: ValueKey('Text_q8q8'),
                  'Create Profile',
                  style: FlutterFlowTheme.of(context).displayLarge.override(
                        font: GoogleFonts.josefinSans(
                          fontWeight: FlutterFlowTheme.of(context)
                              .displayLarge
                              .fontWeight,
...
                  ],
                ),
              ),
              Container(
                width: 319.0,
                child: TextFormField(
                  key: ValueKey('TextField_6z0p'),
                  controller: _model.textController1,
                  focusNode: _model.textFieldFocusNode,
                  onChanged: (_) => EasyDebounce.debounce(
                    '_model.textController1',
                    Duration(milliseconds: 2000),
                    () => safeSetState(() {}),
...
                          ),
                        );
                      }
                      List<UsersRecord> buttonUsersRecordList = snapshot.data!;

                      return FFButtonWidget(
                        key: ValueKey('button_qjy1'),
                        onPressed: () async {
                          logFirebaseEvent('CREATE_PROFILE_PAGE_button_ON_TAP');
                          if (buttonUsersRecordList.length > 0) {
                            logFirebaseEvent('button_show_snack_bar');
                            ScaffoldMessenger.of(context).showSnackBar(
                              SnackBar(
...
